Main add not found page

--- a/components/login.html
+++ b/components/login.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/login.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <title>Inicia Sesion</title>
 </head>
 <body>
     <header class="header">
-        <img class="header__img" src="img/Nintendo-Logo-PNG-1-500x189.png" alt="logo">
+        <img class="header__img" src="../img/Nintendo-Logo-PNG-1-500x189.png" alt="logo">
     </header>
     <section class="login">
         <section class="login__container">
@@ -29,8 +29,8 @@
                 </div>
             </form>
             <section class="login__container--social-media">
-                <div><img src="img/icons8-logo-de-google-30.png" alt="Google">Inicia sesion con Google</div>
-                <div><img src="img/icons8-twitter-30.png" alt="Twitter">Inicia sesion con Twitter</div>
+                <div><img src="../img/icons8-logo-de-google-30.png" alt="Google">Inicia sesion con Google</div>
+                <div><img src="../img/icons8-twitter-30.png" alt="Twitter">Inicia sesion con Twitter</div>
             </section>
             <p class="login__container--register">No tienes ninguna cuenta <a href="">Registrate</a></p>
         </section>
