--- a/components/registro.html
+++ b/components/registro.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/registro.css">
+    <link rel="stylesheet" href="../styles/registro.css">
     <title>Registrate</title>
 </head>
 <body>
     <header class="header">
-        <img class="header__img" src="img/Nintendo-Logo-PNG-1-500x189.png" alt="logo">
+        <img class="header__img" src="../img/Nintendo-Logo-PNG-1-500x189.png" alt="logo">
     </header>
     <section class="registrate"> 
         <section class="registrate__container">
@@ -24,8 +24,8 @@
                 <button class="button">Registrate</button>
             </form>
             <section class="registrate__container--social-media">
-                <div><img src="img/icons8-logo-de-google-30.png" alt="goggle">Registrate con Google</div>
-                <div><img src="img/icons8-twitter-30.png" alt="goggle">Registrate con Twitter</div>
+                <div><img src="../img/icons8-logo-de-google-30.png" alt="goggle">Registrate con Google</div>
+                <div><img src="../img/icons8-twitter-30.png" alt="goggle">Registrate con Twitter</div>
             </section>
             <p class="registrate__container--login">Ya tienes una cuenta?,<a href="/">Inicia Sesion</a></p>
         </section>
